demo/src/main/java/com/example/demo/principle/lsp/negative/VipConsumer.java
package com.example.demo.principle.lsp.negative;

import lombok.Data;

/**
 * @Author zhangle
 * @CreateTime 2021-12-02 10:57:14
 * @Description
 */
@Data
public class VipConsumer {
    private String name;
    private String email;
}
